--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,3 @@
 spring.application.name=Employee_Directory
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.profiles.active=test
 
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
