test controller with testRestTemplate and security disabled

--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,8 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+			<scope>test</scope>
+<!--			<scope>runtime</scope>-->
 		</dependency>
 
 		<dependency>
