--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.application.name=Employee_Directory
-spring.profiles.active=dev
+spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/employee_directory
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Secondary Data Source - Student DB
+student.datasource.jdbc-url=jdbc:mysql://localhost:3306/student_tracker
+student.datasource.username=springstudent
+student.datasource.password=springstudent
+student.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
