--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -10,7 +10,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.jdbc.datasource.init=DEBUG
 
 spring.sql.init.mode=always
